FormReborn(Сделал полную хуйню работает на костылях)

--- a/Views/Bookshelf/Index.cshtml
+++ b/Views/Bookshelf/Index.cshtml
@@ -2,15 +2,42 @@
 @using BooksNotBoobs.Domain.Entities
 @model List<Book>
 
-
 <div class="collection-content">
-
-    @foreach (var item in Model) 
+    @for (int i = 0; i < Model.Count; i++)
     {
-        <div class="bookadd">
-            <p>@item.BookName</p>
+        var item = Model[i];
+        var modalId = "exampleModal" + i;
+
+        <div class="bookAdd d-flex flex-column justify-content-end">
+
+            <div class="BookButton">
+                <button type="button" class="btm" data-bs-toggle="modal" data-bs-target="#@modalId">
+                    <img class="size" src="@Url.Content(item.UrlImg)" alt="Alternate Text" />
+                </button>
+            </div>
+           
+
+            <div class="modal fade" id="@modalId" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">@item.BookName</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body text-center">
+                            <p>@item.Area</p>
+                            <h3>Оценка: @item.Point</h3>
+                            &copy; 2024 - BooksNotBoobs - @item.Author
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     }
-    
-    <a asp-action="SetBooks" asp-controller="Bookshelf">Add Book</a>
+
+    <a class="SetBookButton" asp-action="SetBooks" asp-controller="Bookshelf">Add Book</a>
 </div>
