--- a/Views/Bookshelf/SetBooks.cshtml
+++ b/Views/Bookshelf/SetBooks.cshtml
@@ -1,3 +1,29 @@
-﻿
+﻿@using BooksNotBoobs.DTOs
+@model NewBook
 
-@await Html.PartialAsync("AddBookFormPartial")
+<div class="AddBook">
+    <form asp-action="CheckBookForm" asp-controller="Bookshelf" asp-area="" method="post">
+        <div asp-validation-summary="ModelOnly"></div>
+        <div>
+            <span class="text-danger" asp-validation-for="BookName"></span>
+            <input asp-for="BookName" type="text" placeholder="BookName" />
+        </div>
+
+        <div>
+            <span class="text-danger" asp-validation-for="Author"></span>
+            <input asp-for="Author" type="text" placeholder="Author" />
+        </div>
+
+        <div>
+            <textarea asp-for="Area" placeholder="emotion"></textarea>
+        </div>
+
+        <div>
+            <span class="text-danger" asp-validation-for="Point"></span>
+            <input asp-for="Point" type="number" />
+        </div>
+
+
+        <button class="pushButton">push</button>
+    </form>
+</div>
