--- a/Views/Bookshelf/Index.cshtml
+++ b/Views/Bookshelf/Index.cshtml
@@ -38,6 +38,6 @@
             </div>
         </div>
     }
-
-    <a class="SetBookButton" asp-action="SetBooks" asp-controller="Bookshelf">Add Book</a>
+    <a class="plus-link" asp-action="SetBooks" asp-controller="Bookshelf">+</a>
 </div>
+
