--- a/Views/Bookshelf/SetBooks.cshtml
+++ b/Views/Bookshelf/SetBooks.cshtml
@@ -1,29 +1,32 @@
 ﻿@using BooksNotBoobs.DTOs
 @model NewBook
 
+<h1 class="text-center">New Book</h1>
 <div class="AddBook">
-    <form asp-action="CheckBookForm" asp-controller="Bookshelf" asp-area="" method="post">
-        <div asp-validation-summary="ModelOnly"></div>
-        <div>
-            <span class="text-danger" asp-validation-for="BookName"></span>
-            <input asp-for="BookName" type="text" placeholder="BookName" />
-        </div>
+    <div class="AddBook">
+        <form class="FormBook" asp-action="CheckBookForm" asp-controller="Bookshelf" asp-area="" method="post">
+            <div asp-validation-summary="ModelOnly"></div>
+            <div>
+                <span class="text-danger" asp-validation-for="BookName"></span>
+                <input class="InputBook" asp-for="BookName" type="text" placeholder="BookName" />
+            </div>
 
-        <div>
-            <span class="text-danger" asp-validation-for="Author"></span>
-            <input asp-for="Author" type="text" placeholder="Author" />
-        </div>
+            <div>
+                <span class="text-danger" asp-validation-for="Author"></span>
+                <input class="InputBook" asp-for="Author" type="text" placeholder="Author" />
+            </div>
 
-        <div>
-            <textarea asp-for="Area" placeholder="emotion"></textarea>
-        </div>
+            <div>
+                <textarea class="InputBook" asp-for="Area" placeholder="emotion"></textarea>
+            </div>
 
-        <div>
-            <span class="text-danger" asp-validation-for="Point"></span>
-            <input asp-for="Point" type="number" />
-        </div>
+            <div>
+                <span class="text-danger" asp-validation-for="Point"></span>
+                <input class="InputBook" asp-for="Point" type="number" />
+            </div>
 
 
-        <button class="pushButton">push</button>
-    </form>
+            <button class="pushButton">push</button>
+        </form>
+    </div>
 </div>
