--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -6,20 +6,20 @@
         <h1>SignIn</h1>
     </div>
 
-    <div class="registrForm d-flex align-items-center">
-        <form asp-area="" asp-action="Login" asp-controller="Login" method="post">
+    <div class="LoginContent d-flex align-items-center">
+        <form class="LoginForm" asp-area="" asp-action="Login" asp-controller="Login" method="post">
             <div asp-validation-summary="ModelOnly"></div>
             <div>
                 <span class="text-danger" asp-validation-for="Email"></span>
-                <input asp-for="Email" class="RegInput" type="email" value="" placeholder="email" />
+                <input class="LogInput" asp-for="Email" type="email" value="" placeholder="email" />
             </div>
 
             <div>
                 <span class="text-danger" asp-validation-for="Password"></span>
-                <input asp-for="Password" class="RegInput" type="password" value="" placeholder="password" />
+                <input class ="LogInput" asp-for="Password" type="password" value="" placeholder="password" />
             </div>
 
-            <button type="submit" class="registrButton">Отправить</button>
+            <button type="submit" class="LogButton">Отправить</button>
         </form>
     </div>
 
