--- a/Views/Shared/HeaderPartial.cshtml
+++ b/Views/Shared/HeaderPartial.cshtml
@@ -14,7 +14,7 @@
                     </a>
                 }
                 <a class="d-none d-sm-block" asp-action="Index" asp-controller="Bookshelf">
-                    <img src="~/img/xray.png" alt="Alternate Text" />
+                    <img src="~/img/book.png" alt="Alternate Text" />
                 </a>
             </div>
 
@@ -27,7 +27,7 @@
                         <img src="~/img/twitter.png" alt="Alternate Text" />
                     </a>
                     <a asp-action="Index" asp-controller="Home">
-                        <img src="~/img/xray.png" alt="Alternate Text" />
+                        <img src="~/img/book.png" alt="Alternate Text" />
                     </a>
                 </div>
             </div>
