--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -114,6 +114,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     max-width: max-content;
+    margin-top:40px;
 }
 
 .btm, .size {
@@ -247,5 +248,47 @@ body {
     }
 }
 
+.bookAdd {
+    margin-top:40px;
+}
 
+/* Контейнер для всей формы поиска */
+.SearchForm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
+.search {
+    padding: 10px 15px;
+    border: 2px solid #ccc;
+    border-radius: 25px 0 0 25px;
+    outline: none;
+    font-size: 16px;
+    transition: border-color 0.3s ease;
+    width: 300px;
+}
+
+.search:focus {
+    border-color: #6772e5;
+    box-shadow: 0 0 5px rgba(103, 114, 229, 0.5);
+}
+
+.SearchButton {
+    padding: 10px 20px;
+    border: 2px solid #6772e5;
+    background-color: #6772e5;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 0 25px 25px 0;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.SearchButton:hover {
+    background-color: #5564c1;
+    border-color: #5564c1;
+}
