--- a/Views/Registration/Index.cshtml
+++ b/Views/Registration/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using BooksNotBoobs.DTOs
+﻿@using BooksNotBoobs.ViewModel
 @model NewUser
 
 <div class="registrContent d-flex justify-content-between align-items-center flex-wrap">
